--- a/src/layouts/ThemeScript.astro
+++ b/src/layouts/ThemeScript.astro
@@ -6,22 +6,22 @@
 
 <script is:inline>
   // figure out user's preferred theme and set it as html class for tailwind before paint
-  (function () {
-    if (typeof window !== "undefined") {
+  ;(function () {
+    if (typeof window !== 'undefined') {
       const isSystemColorSchemeDark = window.matchMedia(
-        "(prefers-color-scheme: dark)"
-      ).matches;
-      const storageTheme = sessionStorage.getItem("theme");
+        '(prefers-color-scheme: dark)'
+      ).matches
+      const storageTheme = sessionStorage.getItem('theme')
       if (!storageTheme && isSystemColorSchemeDark) {
-        document.documentElement.classList.add("dark");
-        document.head.children.namedItem("theme-color").content = "#0e141b";
-      } else if (storageTheme === "dark") {
-        document.documentElement.classList.add("dark");
-        document.head.children.namedItem("theme-color").content = "#0e141b";
+        document.documentElement.classList.add('dark')
+        document.head.children.namedItem('theme-color').content = '#0e141b'
+      } else if (storageTheme === 'dark') {
+        document.documentElement.classList.add('dark')
+        document.head.children.namedItem('theme-color').content = '#0e141b'
       } else {
         // we already server render light theme
-        document.head.children.namedItem("theme-color").content = "#ffffff";
+        document.head.children.namedItem('theme-color').content = '#ffffff'
       }
     }
-  })();
+  })()
 </script>
