--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -6,7 +6,7 @@
 <script>
   // @ts-nocheck
   window.remark_config = {
-    host: 'https://comments.diymultideck.com',
+    host: '202.61.244.255',
     site_id: 'remark',
     components: ['embed', 'last-comments'],
     max_shown_comments: 25,
