Fix missing closing tag

--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -132,6 +132,7 @@ const sortedPosts = posts
                         <i class="ti ti-brush" />
                         <span><span class="font-[450]">{mapping.requiredDrawingsCount}</span> <span class="text-sm text-stone-600 dark:text-stone-300">drawing{mapping.requiredDrawingsCount === 1 ? '' : 's'}</span></span>
                       </div>
+                    </div>
                   </div>
 
                   <div class="hidden sm:flex gap-1 flex-wrap text-sm mt-3">
