--- a/src/components/GitHubGistEmbed.astro
+++ b/src/components/GitHubGistEmbed.astro
@@ -1,9 +1,9 @@
 ---
 type Props = {
-  id: string;
-};
+  id: string
+}
 
-const { id } = Astro.props;
+const { id } = Astro.props
 ---
 
 <iframe
@@ -14,26 +14,26 @@ const { id } = Astro.props;
   data-id={id}></iframe>
 <script>
   // @ts-nocheck
-  window.addEventListener("DOMContentLoaded", () => {
+  window.addEventListener('DOMContentLoaded', () => {
     document.querySelectorAll(`.gist-iframe`).forEach((iframe) => {
-      const id = iframe.dataset.id;
-      let doc = iframe.document;
+      const id = iframe.dataset.id
+      let doc = iframe.document
       if (iframe.contentDocument) {
-        doc = iframe.contentDocument;
+        doc = iframe.contentDocument
       } else if (iframe.contentWindow) {
-        doc = iframe.contentWindow.document;
+        doc = iframe.contentWindow.document
       }
 
-      const gistLink = `https://gist.github.com/${id}.js`;
-      const gistScript = `<script type="text/javascript" src="${gistLink}"><\/script>`;
-      const styles = "<style>*{font-size:12px;}</style>";
-      const elementId = `gist-${id}`;
-      const resizeScript = `onload="parent.document.getElementById('${elementId}').style.height=document.body.scrollHeight + 'px'"`;
-      const iframeHtml = `<html><head><base target="_parent">${styles}</head><body ${resizeScript}>${gistScript}</body></html>`;
+      const gistLink = `https://gist.github.com/${id}.js`
+      const gistScript = `<script type="text/javascript" src="${gistLink}"><\/script>`
+      const styles = '<style>*{font-size:12px;}</style>'
+      const elementId = `gist-${id}`
+      const resizeScript = `onload="parent.document.getElementById('${elementId}').style.height=document.body.scrollHeight + 'px'"`
+      const iframeHtml = `<html><head><base target="_parent">${styles}</head><body ${resizeScript}>${gistScript}</body></html>`
 
-      doc.open();
-      doc.writeln(iframeHtml);
-      doc.close();
-    });
-  });
+      doc.open()
+      doc.writeln(iframeHtml)
+      doc.close()
+    })
+  })
 </script>
