--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import { SITE_TITLE } from '../config'
 
       <article>
         <p>
-          The DIY multideck is a deck of 120 poker-sized playing cards that lets
+          The DIY multideck is a deck of 10 poker-sized playing cards that lets
           you play many games by using a bit of imagination and sometimes
           drawing on the cards. Drawing on the cards allows creating
           game-specific cards.
@@ -671,9 +671,10 @@ import { SITE_TITLE } from '../config'
         </p>
         <h3 id="is-it-legal-">Is it legal?</h3>
         <p>
-          <strong>Yes!</strong> Selling/buying or printing the DIY Multideck is legal,
-          even if the porpoise is to play other games. Also, this website, with explanations
-          of how to play other games, an all it's contents, is legal.
+          <strong>Yes!</strong> Selling/buying or printing the DIY Multideck is
+          legal, even if the porpoise is to play other games. Also, this
+          website, with explanations of how to play other games, an all it's
+          contents, is legal.
         </p>
         <p>
           Board games are generally not protected intellectual property. What is
