--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -17,6 +17,7 @@ import Favicon from './Favicon.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import Comments from '../components/Comments.astro'
+import MetaTags from './MetaTags.astro'
 
 export interface Props {
   title: string | readonly [string, string, string]
@@ -34,9 +35,7 @@ const formattedDate = new Date(date).toLocaleDateString('en-us', {
 <!DOCTYPE html>
 <html class="theme-sleek" lang="en">
   <head>
-    <!-- Global Metadata -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <MetaTags />
     <Favicon />
     <slot name="meta" />
     <GoogleFont />
