--- a/src/components/PageMeta.astro
+++ b/src/components/PageMeta.astro
@@ -1,11 +1,6 @@
 ---
 import { getPageMeta } from '../lib/seo'
-import {
-  SITE_TITLE,
-  SITE_DESCRIPTION,
-  SITE_URL,
-  TWITTER_HANDLE,
-} from '../config'
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_URL } from '../config'
 
 export interface Props {
   title?: string
@@ -22,8 +17,6 @@ const { meta, og, twitter } = getPageMeta({
   ogImageAltText: 'My fancy website',
   ogImageWidth: 1200,
   ogImageHeight: 630,
-  siteOwnerTwitterHandle: TWITTER_HANDLE,
-  contentAuthorTwitterHandle: TWITTER_HANDLE,
 })
 ---
 
