--- a/src/components/BlogPostMeta.astro
+++ b/src/components/BlogPostMeta.astro
@@ -1,11 +1,6 @@
 ---
 import { getBlogPostMeta } from '../lib/seo'
-import {
-  SITE_TITLE,
-  SITE_DESCRIPTION,
-  SITE_URL,
-  MY_NAME,
-} from '../config'
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_URL, MY_NAME } from '../config'
 
 export interface Props {
   title?: string
