--- a/src/components/GamePostMeta.astro
+++ b/src/components/GamePostMeta.astro
@@ -1,10 +1,6 @@
 ---
 import { getGamePostMeta } from '../lib/seo'
-import {
-  SITE_TITLE,
-  SITE_DESCRIPTION,
-  SITE_URL,
-} from '../config'
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_URL } from '../config'
 
 export interface Props {
   title?: string
