--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -32,7 +32,7 @@ const formattedDate = new Date(date).toLocaleDateString('en-us', {
 })
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html class="theme-sleek" lang="en">
   <head>
     <MetaTags />
