--- a/src/pages/buy.astro
+++ b/src/pages/buy.astro
@@ -17,8 +17,8 @@ import PageLayout from '../layouts/PageLayout.astro'
       </span>
     </h1>
     <p class="text-center">
-      Sorry, the deck is <strong>not avilable</strong> yet, because it's still in
-      development.
+      Sorry, the deck is <strong>not avilable</strong> yet, because it's still
+      in development.
     </p>
 
     <!-- Hide until fixed -->
@@ -56,14 +56,14 @@ import PageLayout from '../layouts/PageLayout.astro'
         class="hidden mt-16 text-center text-4xl text-green-600 font-light"
       >
         <i class="ti ti-circle-check text-4xl"></i>
-        Subscribed!
+         Subscribed!
       </div>
       <div
         id="subscribe-error"
         class="hidden mt-16 text-center text-4xl text-red-600 font-light"
       >
         <i class="ti ti-circle-x text-4xl"></i>
-        Error
+         Error
       </div>
     </div>
   </Fragment>
