--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -15,12 +15,13 @@ import { SITE_TITLE } from '../config'
         Privacy policy
       </h1>
       <p class="mb-4">
-        This site uses <a href="https://remark42.com/">Remark 42</a> library to provide
-        coments.
+        This site uses <a href="https://remark42.com/">Remark 42</a> library to
+        provide coments.
       </p>
       <p>
         Check more detais of the Remark 42 privacy in
-        <a href="https://remark42.com/privacy/">their privacy policy page</a> and
+        <a href="https://remark42.com/privacy/">their privacy policy page</a>
+        and
         <a href="https://remark42.com/#privacy"
           >their landing page's privacy section</a
         >
