Add view transitions

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -6,26 +6,28 @@
 
 <script>
   // @ts-nocheck
-  window.remark_config = {
-    host: '202.61.244.255',
-    site_id: 'remark',
-    components: ['embed', 'last-comments'],
-    max_shown_comments: 25,
-    theme: 'light',
-    show_email_subscription: false,
-    simple_view: true,
-    no_footer: true,
-  }
-
-  !(function (e, n) {
-    for (var o = 0; o < e.length; o++) {
-      var r = n.createElement('script'),
-        c = '.js',
-        d = n.head || n.body
-      'noModule' in r ? ((r.type = 'module'), (c = '.mjs')) : (r.async = !0),
-        (r.defer = !0),
-        (r.src = remark_config.host + '/web/' + e[o] + c),
-        d.appendChild(r)
+  document.addEventListener('astro:page-load', () => {
+    window.remark_config = {
+      host: '202.61.244.255',
+      site_id: 'remark',
+      components: ['embed', 'last-comments'],
+      max_shown_comments: 25,
+      theme: 'light',
+      show_email_subscription: false,
+      simple_view: true,
+      no_footer: true,
     }
-  })(remark_config.components || ['embed'], document)
+
+    !(function (e, n) {
+      for (var o = 0; o < e.length; o++) {
+        var r = n.createElement('script'),
+          c = '.js',
+          d = n.head || n.body
+        'noModule' in r ? ((r.type = 'module'), (c = '.mjs')) : (r.async = !0),
+          (r.defer = !0),
+          (r.src = remark_config.host + '/web/' + e[o] + c),
+          d.appendChild(r)
+      }
+    })(remark_config.components || ['embed'], document)
+  })
 </script>
