--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -46,7 +46,7 @@ import DarkModeToggle from './DarkModeToggle.astro'
       </svg>
     </a>
   </div>
-  <DarkModeToggle />
+  <DarkModeToggle transition:persist />
 </header>
 <style>
   header {
