--- a/src/layouts/ThemeScript.astro
+++ b/src/layouts/ThemeScript.astro
@@ -4,24 +4,32 @@
 */
 ---
 
-<script is:inline>
-  // figure out user's preferred theme and set it as html class for tailwind before paint
-  ;(function () {
-    if (typeof window !== 'undefined') {
-      const isSystemColorSchemeDark = window.matchMedia(
-        '(prefers-color-scheme: dark)'
-      ).matches
-      const storageTheme = sessionStorage.getItem('theme')
-      if (!storageTheme && isSystemColorSchemeDark) {
-        document.documentElement.classList.add('dark')
-        document.head.children.namedItem('theme-color').content = '#0e141b'
-      } else if (storageTheme === 'dark') {
-        document.documentElement.classList.add('dark')
-        document.head.children.namedItem('theme-color').content = '#0e141b'
-      } else {
-        // we already server render light theme
-        document.head.children.namedItem('theme-color').content = '#ffffff'
-      }
+<script>
+  function updateTheme() {
+    if (!window || !document) return
+
+    const isSystemColorSchemeDark = window.matchMedia(
+      '(prefers-color-scheme: dark)'
+    ).matches
+    const storageTheme = sessionStorage.getItem('theme')
+    const themeColor = document.head.children.namedItem(
+      'theme-color'
+    ) as HTMLMetaElement
+    if (!themeColor) return
+
+    if (!storageTheme && isSystemColorSchemeDark) {
+      document.documentElement.classList.add('dark')
+      themeColor.content = '#0e141b'
+      return
     }
-  })()
+
+    if (storageTheme === 'dark') {
+      document.documentElement.classList.add('dark')
+      themeColor.content = '#0e141b'
+    } else {
+      themeColor.content = '#ffffff'
+    }
+  }
+  updateTheme()
+  document.addEventListener('astro:after-swap', updateTheme)
 </script>
