Kind of fix overflow

--- a/src/components/markdown/UsedCards.astro
+++ b/src/components/markdown/UsedCards.astro
@@ -229,7 +229,7 @@ const miniCardVersionByLayout = {
 
 <div class="overflow-x-auto -mx-3 sm:mx-0 px-3 sm:px-0">
   <div
-    class="grid gap-0.5 items-center grid-cols-[repeat(var(--columns,15),minmax(2.5rem,3.5rem))] w-full mx-auto justify-center"
+    class="grid gap-0.5 items-center grid-cols-[repeat(var(--columns,15),minmax(2.5rem,3.5rem))] w-full mx-auto justify-center-safe"
     style={{
       '--columns': cardGrids[layout][0]?.length ?? 15,
     }}
