--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,9 @@ const { Content } = await entry.render()
         <p class="text-2xl pb-4">Draw in your cards!</p>
       </div>
 
-      <Content />
+      <div class="prose-li:m-0 prose-ul:m-0">
+        <Content />
+      </div>
     </section>
 
     <BuyBanner />
