--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ import DarkModeToggle from './DarkModeToggle.astro'
   >
     <a
       class="hidden sm:inline-block unset text-xl ml-4 outline-none focus-visible:ring-2 ring-stone-700 rounded-sm ring-offset-4"
-      href="https://boardgamegeek.com/"
+      href="https://boardgamegeek.com/thread/3128477/diy-multideck-deck-cards-play-many-games"
     >
       <svg
         aria-hidden="true"
