--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const { Content } = await entry.render()
   />
 
   <Fragment slot="main">
-    <section class="prose prose-sleek mb-8">
+    <section class="mb-8">
       <div class="mb-4">
         <h1
           class="font-extrabold text-5xl md:text-6xl tracking-tight pt-4 pb-2 overflow-hidden"
@@ -32,7 +32,9 @@ const { Content } = await entry.render()
         <p class="text-2xl pb-4">Draw in your cards!</p>
       </div>
 
-      <div class="prose-li:m-0 prose-ul:m-0">
+      <div
+        class="prose prose-sleek prose-li:m-0 prose-ul:m-0 prose-table:border-current/25"
+      >
         <Content />
       </div>
     </section>
