--- a/src/components/markdown/CardDistributionTable.astro
+++ b/src/components/markdown/CardDistributionTable.astro
@@ -169,7 +169,7 @@ const rows = [
     'not-prose w-full table-fixed text-center [&_th]:overflow-hidden [&_th]:px-0 [&_td]:px-0 [&_th]:py-1 [&_td]:py-1 leading-none [&_th]:align-middle [&_td]:align-middle',
   ]}
 >
-  <thead class="text-sm border">
+  <thead class="text-sm border sticky top-0 bg-white shadow">
     <tr>
       <th colspan="2">Ba<wbr />sic</th>
       <th colspan="4" class="border-l">3D</th>
